[gd_scene format=3 uid="uid://u7bfx5wgbwtw"]

[ext_resource type="Script" uid="uid://xs47ftbdkmo3" path="res://Scripts/UI/Intermission/intermission.gd" id="1_147it"]
[ext_resource type="PackedScene" uid="uid://cvroc13lcl75m" path="res://Scenes/UI/Intermission/card_selector.tscn" id="2_4mb0g"]
[ext_resource type="Script" uid="uid://bmjlmrkhbfctg" path="res://Scripts/UI/Intermission/Merchant_organizer.gd" id="3_23ndt"]
[ext_resource type="PackedScene" uid="uid://bua11o6oudri4" path="res://Scenes/UI/Player/rune_manager.tscn" id="9_i2n8q"]
[ext_resource type="PackedScene" uid="uid://dluppe6lcdir0" path="res://Scenes/UI/Player/consumable_manager.tscn" id="10_lr1so"]

[node name="Intermission" type="Node2D" unique_id=54511774 groups=["card manager", "current scene"]]
script = ExtResource("1_147it")

[node name="CardSelector" parent="." unique_id=1637638165 instance=ExtResource("2_4mb0g")]
visibility_layer = 3

[node name="MerchantOrganizer" type="Node2D" parent="." unique_id=321779437]
script = ExtResource("3_23ndt")

[node name="ConsumableManger" parent="." unique_id=1134132803 instance=ExtResource("10_lr1so")]
visible = false

[node name="RuneManager" parent="." unique_id=69554143 instance=ExtResource("9_i2n8q")]

[node name="TooltipTimer" type="Timer" parent="." unique_id=1147560163]

[node name="SkipButton" type="Button" parent="." unique_id=670665511]
offset_left = 1742.0
offset_top = 894.0
offset_right = 1814.0
offset_bottom = 918.0
text = "Skip"

[connection signal="timeout" from="TooltipTimer" to="." method="_on_tooltip_timer_timeout"]
[connection signal="button_down" from="SkipButton" to="." method="_on_skip_button_button_down"]
