[gd_scene load_steps=5 format=3 uid="uid://u7bfx5wgbwtw"]

[ext_resource type="Script" path="res://Scripts/UI/Intermission/intermission.gd" id="1_147it"]
[ext_resource type="PackedScene" uid="uid://cvroc13lcl75m" path="res://Scenes/UI/Intermission/card_selector.tscn" id="2_4mb0g"]
[ext_resource type="Script" path="res://Scripts/UI/Intermission/Merchant_organizer.gd" id="3_23ndt"]
[ext_resource type="Script" path="res://Scripts/UI/EnemySelection/PlayerInventory.gd" id="4_g0kot"]

[node name="Intermission" type="Node2D" groups=["card manager"]]
script = ExtResource("1_147it")

[node name="CardSelector" parent="." instance=ExtResource("2_4mb0g")]
visibility_layer = 3

[node name="MerchantOrganizer" type="Node2D" parent="."]
script = ExtResource("3_23ndt")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 3
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(48.0007, 27.003)
color = Color(0.233925, 0.233925, 0.233925, 1)

[node name="PlayerInventory" type="Node2D" parent="."]
visible = false
z_index = 3
script = ExtResource("4_g0kot")

[node name="InventoryButton" type="Button" parent="."]
z_index = 3
offset_left = 1639.0
offset_top = 876.0
offset_right = 1722.0
offset_bottom = 907.0
text = "Inventory"

[connection signal="button_down" from="InventoryButton" to="." method="_on_inventory_button_button_down"]
